# temp

./: Proj_Structure.md
.old_application/openapi/feedback-api-client/: README.md  pyproject.toml
.old_application/openapi/feedback-api-client/feedback_api_client/: __init__.py
.old_application/openapi/feedback-api-client/feedback_api_client/api/feedback/: delete_observability_feedback.py
.old_application/openapi/feedback-api-client/feedback_api_client/models/: __init__.py  create_observability_feedback_response_400.py  create_observability_feedback_response_500_error.py  create_observability_feedback_response_500_error_code.py  delete_observability_feedback_response_404.py  delete_observability_feedback_response_500.py  delete_observability_feedback_response_500_error.py  feedback.py  feedback_context.py  feedback_entity.py  feedback_guardrail_failure_type.py  get_observability_application_feedback_response_404.py  get_observability_application_feedback_response_404_error.py  get_observability_application_feedback_response_500.py  get_observability_application_feedback_response_500_error.py  get_observability_application_feedback_response_500_error_code.py  get_observability_feedback_response_404.py  get_observability_feedback_response_404_error_code.py  get_observability_feedback_response_500.py  get_observability_feedback_response_500_error.py  get_observability_user_feedback_response_500_error_code.py
application/: start.sh
notebooks/: DynamoDB.ipynb  update.ipynb
terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf
(+38 files in other folders)
